--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: auto 30px;
 }
 .device h2{
     width: 100%;
@@ -281,10 +282,15 @@ align-items: center;
     transform: scale(1.1);
 
 }
+.device .right_list li:hover{
+transform: translateY(-20px);
+
+}
 .device .right_list li{width: calc((100% - 50px)/3);
 border-radius: 20px;
 overflow: hidden;
-position: relative;}
+position: relative;
+transition: 0.5s;}
 .device .right_list li img{width: 100%;}
 .device .right_list li .right_list_text{               
     position: absolute;
@@ -556,8 +562,8 @@ position: relative;}
 /*************************** */
 
 #quick_btn{position: fixed;
-right: 100px;
-bottom: 100px;
+right: 70px;
+bottom: 70px;
 }
 #quick_btn  .main{
     width:50px;height:50px;
@@ -585,6 +591,7 @@ bottom: 100px;
 
 /*********** 타블렛 반응형 **********/
 @media all and (max-width:1024px) {
+
     #nav .gnb {
         /* display: flex;
         flex-direction: row;
@@ -593,6 +600,10 @@ bottom: 100px;
         font-size: 1rem;
         font-weight: 500; */
         display: none;
+    }
+    #header .logo{
+        position: absolute;
+        left: 10px;
     }
     #header .inner {
         /* display: flex;
@@ -605,7 +616,7 @@ bottom: 100px;
     #nav .nav_btn{
         position: absolute;
         top:-50px;
-        right: 0;
+        right: 10px;
         z-index: 9;
     }
     #header .top_btn {
@@ -623,6 +634,18 @@ bottom: 100px;
         font-size: 0.9rem;
         color: #929292; */
         font-size: 0.75rem;
+        
+    }
+    #slide1 div {
+        height: 50vh;
+        overflow: hidden;
+    }
+    #slide1 div img{
+        /* position: absolute;
+        top: 0; left: 0; */
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
     }
     #slide1 .slide_text {
         /* position: absolute;
@@ -638,6 +661,7 @@ bottom: 100px;
         /* width: 45%; */
         width: 100%;
         margin: 0 10px;
+        transform: translateY(-10%);
     }
    
     #slide2 .slide_cont1 .slide_right {
@@ -665,9 +689,35 @@ bottom: 100px;
         margin-bottom: 30px;
     }
 
+
+
     .device .right_list {
         width: 100%;
-        
+        margin-top: 50px;
+    }
+    .device .right_list li {
+        width: calc((100% - 15px)/3);
+        /* border-radius: 20px;
+        overflow: hidden;
+        position: relative; */
+    }
+    .device .right_list li .right_list_text {
+        /* position: absolute;
+        z-index: 8;
+        color: #000;
+        font-weight: 600; */
+        left: 18px;
+        top: 15px;
+        font-size: 0.8rem;
+    }
+    .device .right_list > ul > li p::after {
+        /* content: '';
+        display: inline-block;
+        border-bottom: 2px solid black;
+        border-right: 2px solid black;
+        transform: rotate(-45deg) translate(3px,0px); */
+        width: 6px;
+        height: 6px;
     }
     .device .left_txt {
         width: 100%;
@@ -695,10 +745,14 @@ bottom: 100px;
         font-weight: 300; */
         font-size: 1rem;
     }
-
+  
     #footer .footer_text_link {
         /* vertical-align: middle; */
         width: 100%;
+    }
+   .inner {
+      margin-right: 10px;
+      margin-left: 10px;
     }
 
     #icon_list .inner {
@@ -713,15 +767,31 @@ bottom: 100px;
         box-sizing: border-box;
         text-align: center;
         border-radius: 20px;
-        padding: 50px;
+        padding: 23px;
+        margin-right: 10px;
+        margin-bottom: 10px
     }
     #footer #logo_list {
         display: none;
+    }
+    #quick_btn {
+        position: fixed;
+        right: 30px;
+        bottom: 30px;
+    }
+    #icon_list .icon_list_box:hover{
+        /* border:1px solid #000;
+        transition: 0.3s; */
+        transform: translateY(0px);
+      
     }
 }
 
 
 @media all and (max-width:700px) {
+    .device {
+        padding: 0 0;
+    }
     #icon_list .img_box {
         height: 60px;
         /* margin-bottom: 30px; */
@@ -732,6 +802,17 @@ bottom: 100px;
         /* font-weight: 700;
         color: #000;
         margin-bottom: 15px; */
+    }
+    #slide1 .slide_text {
+        width: 80%;
+        /* position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size: 4rem;
+        color: #fff;
+        font-weight: 700; */
+        transform: translate(-47%,-50%);
+
     }
 
     #notice {
@@ -756,4 +837,33 @@ bottom: 100px;
     #footer #sns_list p {
         margin-right: 10px;
     }
+}
+
+
+
+
+
+
+@media all and (max-width:400px) {
+    #icon_list .list_tit {
+        font-size: 1rem;
+    }
+    #icon_list .list_txt {
+        /* color: #000; */
+        font-size: 0.8rem;
+}
+#icon_list .img_box {
+    /* height: 60px; */
+    margin-bottom: 11px;
+}
+#footer #footer_left span {
+    margin-right: 6px;
+    font-size: 0.8rem;
+}
+#footer #footer_left_top span::after {
+    /* content: "|";
+    font-size: 0.7rem;
+    color: #929292; */
+    margin-left: 6px;
+}
 }
